# E_voting_mobile_app

./: README.md  pubspec.yaml
android/app/src/main/: AndroidManifest.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/constants/: api_client.dart  api_constants.dart
lib/core/storage/: token_storage.dart
lib/features/announcement/screen/: announcement_screen.dart
lib/features/announcement/services/: announcement_service.dart
lib/features/auth/controllers/: auth_provider.dart
lib/features/auth/screens/: login_screen.dart  signup_screen.dart
lib/features/home/screens/: home_screen.dart  room_detail_screen.dart  room_info_screen.dart
lib/features/home/services/: home_service.dart  room_detail_service.dart  (+1 more)
lib/models/: announcement_model.dart  key_model.dart  option_model.dart  room_model.dart  user_info_model.dart  user_model.dart
lib/screens/: splash_screen.dart
lib/services/: auth_service.dart  crypto_service.dart  paillier_service.dart  socket_service.dart
lib/widgets/: bottom_nav.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
paillier_flutter/: .metadata  README.md  ffigen.yaml  pubspec.yaml
paillier_flutter/android/: build.gradle  settings.gradle
paillier_flutter/example/: README.md  pubspec.yaml
paillier_flutter/example/lib/: main.dart
paillier_flutter/ios/: paillier_flutter.podspec
paillier_flutter/ios/Classes/: paillier_flutter.c
paillier_flutter/lib/: paillier_flutter.dart  paillier_flutter_bindings_generated.dart
paillier_flutter/src/: CMakeLists.txt  paillier_flutter.c  paillier_flutter.h
(+14 files in other folders)
